<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ActivityLogin">

        <LinearLayout
            android:orientation="vertical"
            android:layout_marginTop="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/logo"
                android:src="@drawable/business"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"/>


            <LinearLayout
                android:id="@+id/body_two"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/capUser"
                    android:layout_width="250sp"
                    android:layout_height="40sp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20sp"
                    android:background="@drawable/edittext_rounded"
                    android:drawableRight="@drawable/ic_cap_user"
                    android:hint="@string/user_cap"
                    android:paddingLeft="10sp"
                    android:paddingRight="10sp"
                    android:textColor="@color/colorInitBack"
                    android:textColorHint="@color/colorInitBack"
                    android:textSize="15sp"
                    android:maxLines="1"
                    android:singleLine="true"/>

                <EditText
                    android:id="@+id/capPass"
                    android:layout_width="250sp"
                    android:layout_height="40sp"
                    android:layout_gravity="center"
                    android:layout_marginTop="25sp"
                    android:background="@drawable/edittext_rounded"
                    android:drawableRight="@drawable/ic_cap_pass"
                    android:hint="@string/pass_cap"
                    android:paddingLeft="10sp"
                    android:paddingRight="10sp"
                    android:inputType="textPassword"
                    android:textColor="@color/colorInitBack"
                    android:textColorHint="@color/colorInitBack"
                    android:textSize="15sp"
                    android:maxLines="1"
                    android:singleLine="true"/>

                <Button
                    android:id="@+id/buttonEnter"
                    android:layout_width="190dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="20sp"
                    android:layout_gravity="center"
                    android:background="@drawable/buttonbluepush"
                    android:clickable="true"
                    android:onClick="onClick"
                    android:text="@string/user_enter"
                    android:bottomLeftRadius="7dp"
                    android:bottomRightRadius="7dp"
                    android:radius="0.1dp"
                    android:topLeftRadius="7dp"
                    android:topRightRadius="7dp"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/buttonContact"
                    android:layout_width="190dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="20sp"
                    android:layout_gravity="center"
                    android:background="@drawable/buttongraypush"
                    android:text="@string/guest_enter"
                    android:bottomLeftRadius="7dp"
                    android:bottomRightRadius="7dp"
                    android:radius="0.1dp"
                    android:topLeftRadius="7dp"
                    android:topRightRadius="7dp"
                    android:textAllCaps="false"
                    android:textColor="@color/cardview_dark_background"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/body_three"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/body_two"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/user_develop"
                    android:textStyle="bold"
                    android:textSize="15dp"
                    android:gravity="center" />



            </LinearLayout>

        </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>